src2/objects/Staged_SalesOrder__c.object
<CustomObject>
    <fields>
        <fullName>AccountNumberUUID__c</fullName>
        <label>Account Number UUID</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccountNumber__c</fullName>
        <label>Account Number</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderLineNumber__c</fullName>
        <label>Order Line Number</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderNumber__c</fullName>
        <label>Order Number</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProductLegacyId__c</fullName>
        <label>Product LegacyId</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Timestamp__c</fullName>
        <label>Timestamp</label>
        <type>DateTime</type>
    </fields>
    <label>Staged Sales Order</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>AccountNumberUUID__c</columns>
        <columns>ProductLegacyId__c</columns>
        <columns>Quantity__c</columns>
        <columns>OrderNumber__c</columns>
        <columns>OrderLineNumber__c</columns>
        <columns>Timestamp__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SO-{000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Staged Sales Orders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>